# android-badbinder-demo

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/androidTest/java/ru/redbyte/badbinder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cve-2019-2215.c
app/src/main/java/ru/redbyte/badbinder/: ExploitScreen.kt  ExploitViewModel.kt  MainActivity.kt  NativeLogger.kt
app/src/main/java/ru/redbyte/badbinder/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/ru/redbyte/badbinder/: ExampleUnitTest.kt
cve-2019-2215/: Makefile  README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
